--- a/4-Relatórios/CT01/report.html
+++ b/4-Relatórios/CT01/report.html
@@ -1625,22 +1625,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,15053],[],[[4,0,0,[],[0,1001,13855,5],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,63188],[],[[4,0,0,[],[1,459,62650],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TestDesafioTricentis","*C:\\Users\\MRN Informatica\\Desktop\\TestRobotFramework\\1-Tests\\TestDesafioTricentis.robot","*../../1-Tests/TestDesafioTricentis.robot","*CT01:Preencher Primeira Tela","*Evaluating expression 'Element Should Be Visible' failed: SyntaxError: invalid syntax (&lt;string&gt;, line 1)"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TestDesafioTricentis","*C:\\Users\\MRN Informatica\\Desktop\\TestRobotFramework\\1-Tests\\TestDesafioTricentis.robot","*../../1-Tests/TestDesafioTricentis.robot","*CT01:Preencher Primeira Tela"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:14","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:15","fail":1,"id":"s1","label":"TestDesafioTricentis","name":"TestDesafioTricentis","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:03","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:01:03","fail":0,"id":"s1","label":"TestDesafioTricentis","name":"TestDesafioTricentis","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1626035011096;
+window.output["baseMillis"] = 1626123717276;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 15105;
+window.output["generated"] = 63229;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
